fixing scroll on safari

--- a/src/scss/_preview.scss
+++ b/src/scss/_preview.scss
@@ -148,6 +148,7 @@
 @media screen and (max-width: 1250px) {
   .phone-wrapper {
     // padding: 2rem 0;
+    -webkit-overflow-scrolling: touch;
     height: 100vh;
     width: 100vw;
     min-height: -webkit-fill-available;
